--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.android.registry.RegistryCreateActivity"
+            android:label="@string/add_registry"
+        >
+        </activity>
     </application>
 
 </manifest>
