--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,10 @@ dependencies {
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
+
+    // Tests
+    testCompile "com.nhaarman:mockito-kotlin:0.6.0"
+    testCompile 'org.amshove.kluent:kluent:1.6'
 }
 repositories {
     mavenCentral()
